crates/aura-macros/tests/boundaries/capability_boundary_non_capability_helper.stderr
error: capability_boundary requires a capability-bearing signature or body
 --> tests/boundaries/capability_boundary_non_capability_helper.rs:5:75
  |
5 |   fn issue_pending_invitation_consumed_proof(invitation_id: &str) -> String {
  |  ___________________________________________________________________________^
6 | |     invitation_id.to_string()
7 | | }
  | |_^
